[NLP]: Encoder | Update image path

--- a/1-NLP/1-Lets Build an Encoder Part-1.ipynb
+++ b/1-NLP/1-Lets Build an Encoder Part-1.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Encoder-Pipeline](../../imgs/Encoder-Pipeline.png)"
+    "![Encoder-Pipeline](../imgs/Encoder-Pipeline.png)"
    ]
   },
   {
