Update 2-Lets Build an Encoder Part-2.ipynb

--- a/1-NLP/2-Lets Build an Encoder Part-2.ipynb
+++ b/1-NLP/2-Lets Build an Encoder Part-2.ipynb
@@ -480,8 +480,7 @@
     "Now That you had learned to ***build an Encoder from Scratch***, and knows all the nitty griddy parts to modify any Framework's tokenizers or encoders (i.e *TorchText, Spacy, tensorflow, transformers* ...etc)\n",
     "\n",
     "### Next Station 🚌⏭\n",
-    "- Now Let's get a small tutorial using the `TorchText` Encoder which uses `Spacy` internally as its tokenizer\n",
-    "- Then will build an ***E2E Deep-Learning model using the Torch framework*** that predicts the sentiment given the user review\n"
+    "- Then will build an ***E2E Deep-Learning model using the Torch framework*** that predicts the sentiment given the user review Using our `Encoder` Module\n"
    ]
   }
  ],
